--- a/css/sy4-2.css
+++ b/css/sy4-2.css
@@ -17,7 +17,7 @@ a:active, a:hover {
 }
 #top_bg {
      width: 100%;
-	 background: #7bdaae url(top_bg.jpg) repeat-x;
+	 background: #7bdaae url(sy4-2样式图片/top_bg.jpg) repeat-x;
 }
 #container {
      width:900px;
@@ -49,7 +49,7 @@ a:active, a:hover {
 	 float: left;
 	 width:873px;
 	 height: 216px;
-	 background: url(header_bottom_bg.png)no-repeat;
+	 background: url(sy4-2样式图片/header_bottom_bg.png)no-repeat;
 	 margin:15px 0 0 15px;
 }
 /* Menu */
@@ -102,13 +102,13 @@ a:active, a:hover {
 	font-weight: bold;
 	font-size: 14px;
 	color:#276b45;
-	background: url(section_1_top_bg.jpg)np-repeat;
+	background: url(sy4-2样式图片/section_1_top_bg.jpg)np-repeat;
 	margin: 0px;
 	padding: 15px 0 0 70px;
 }
 #section_1_mid {
 	width: 217px;
-	background: url(section_1_mid_bg.jpg)repeat-y;
+	background: url(sy4-2样式图片/section_1_mid_bg.jpg)repeat-y;
 	margin: 0;
 	padding: 5px 15px;
 }
@@ -131,7 +131,7 @@ a:active, a:hover {
 #section_1_bottom {
 	width: 246px;
 	height: 17px;
-	background: url(section_1_bottom_bg.jpg)no-repeat;
+	background: url(sy4-2样式图片/section_1_bottom_bg.jpg)no-repeat;
 }
 #section2 {
     margin: 0 0 15px 0;
@@ -144,13 +144,13 @@ a:active, a:hover {
 	font-weight: bold;
 	font-size:14px;
 	color: #276b45;
-	background: url(section_2_top_bg.jpg)no-repeat;
+	background: url(sy4-2样式图片/section_2_top_bg.jpg)no-repeat;
 	margin: 0;
 	padding: 15px 0 0 70px;
 }
 #section_2_mid {
     width: 246px;
-	background: url(section_2_mid_bg.jpg)repeat-y;
+	background: url(sy4-2样式图片/section_2_mid_bg.jpg)repeat-y;
 	margin: 0;
 	padding: 5px 0;
 }
@@ -175,7 +175,7 @@ a:active, a:hover {
 #section_2_bottom {
 	width: 246px;
 	height: 18px;
-	background: url(section_2_bottom_bg.jpg)no-repeat;
+	background: url(sy4-2样式图片/section_2_bottom_bg.jpg)no-repeat;
 }
 #content_right {
     float: left;
