--- a/css/sy3-2.css
+++ b/css/sy3-2.css
@@ -1,30 +1,30 @@
 @charset "utf-8";
 /* CSS Document */
 *{
-	padding:0px;
+	padding: 0px;
 	margin:0px;
-	line-height:20px;
+	line-height: 20px;
 }
 body{
 	height: 100%;
-	background-color: #f3fle9;
-	position:relative;
+	background-color: #f3f1e9;
+	position: relative;
 }
 img{
-	border:0px;
+	border: 0px;
 }
 #main_block{
-	font-family: Arial,Helvetica,sans-serif;
-	font-size: 14px;
-	color:#464646;
+	font-family:  Helvetica, Arial,sans-serif;
+	font-size: 12px;
+	color: #464646;
 	overflow: hidden;
 	float:left;
-	width:752px;
+	width: 752px;
 }
-.content_main{
+.conten_main{
 	width: 720px;
-	padding: 20px 0 10px 20px;
 	float: left;
+	padding: 20px 0 10px 20px;
 }
 .box_details{
 	padding: 10px 0 10px 0;
@@ -37,5 +37,6 @@ img{
 }
 img.right{
 	float: right;
-	padding: 0,0,0,30px;
+	padding: 0 0 0 30px;
 }
+
