--- a/css/导航页1.css
+++ b/css/导航页1.css
@@ -21,7 +21,7 @@ a {
 }
 body {
 	justify-content: center;
-	background:url("背景.jpg");
+	background:url("img/背景.jpg");
 }
 .nav {
     background-color:#3F00A6;
